--- a/ansible/locust-ec2.yaml
+++ b/ansible/locust-ec2.yaml
@@ -6,7 +6,7 @@
           stack_name: "LocustStack"
           state: "present"
           region: "eu-west-1"
-          template: "aws/templates/locust-cf.json"
+          template: "../aws/templates/locust-cf.json"
           template_parameters:
             KeyName: "camtest"
             InstanceType: "t2.micro"
