--- a/ansible/locust-inst.yaml
+++ b/ansible/locust-inst.yaml
@@ -1,7 +1,7 @@
 - hosts: tag_Name_Locust
-  become: true
-  become_method: sudo
-  remote_user: ubuntu
+  # become: true
+  # become_method: sudo
+  # remote_user: ubuntu
   tasks:
       - name: ensure docker installed
         yum: name=docker state=present update_cache=yes
