--- a/ansible/locust-inst.yaml
+++ b/ansible/locust-inst.yaml
@@ -1,10 +1,12 @@
 - hosts: tag_Name_Locust
-  sudo: yes
-  remote_user: ubuntu
+  # sudo: yes
+  # remote_user: ubuntu
   # become: true
   # become_method: sudo
   # remote_user: ubuntu
   tasks:
+      - name: setup
+        command: sudo su
       - name: ensure docker installed
         yum: name=docker state=present update_cache=yes
       - name: add user to docker group
