--- a/ansible/locust-inst.yaml
+++ b/ansible/locust-inst.yaml
@@ -1,9 +1,7 @@
 - hosts: tag_Name_Locust
-  # sudo: yes
-  # remote_user: ubuntu
-  # become: true
-  # become_method: sudo
-  # remote_user: ubuntu
+  become: true
+  become_method: sudo
+  remote_user: ec2-user
   tasks:
       - name: setup
         command: sudo su
