--- a/ansible/locust-ec2.yaml
+++ b/ansible/locust-ec2.yaml
@@ -5,10 +5,10 @@
         cloudformation:
           stack_name: "LocustStack"
           state: "present"
-          region: "eu-west-1"
+          region: "eu-central-1"
           template: "../aws/templates/locust-cf.json"
           template_parameters:
-            KeyName: "camtest"
+            KeyName: "webteam"
             InstanceType: "t2.micro"
       - name: wait for services to launch
         command: sleep 60
