--- a/ansible/locust-ec2.yaml
+++ b/ansible/locust-ec2.yaml
@@ -5,7 +5,7 @@
         cloudformation:
           stack_name: "LocustStack"
           state: "present"
-          region: "eu-west-1"
+          region: "eu-central-1"
           template: "../aws/templates/locust-cf.json"
           template_parameters:
             KeyName: "delphoi"
