--- a/ansible/locust-inst.yaml
+++ b/ansible/locust-inst.yaml
@@ -13,12 +13,8 @@
         service: name=docker state=started enabled=yes
       - name: install docker-compose
         get_url: url=https://github.com/docker/compose/releases/download/1.8.1/docker-compose-Linux-x86_64 dest=/usr/bin/docker-compose mode=0755
-      - name: sync container images - locustmaster
-        synchronize: src=/mnt/jenkins/tmp-images/locust.img dest=/tmp/locust.img
-      - name: install new docker images - locust
-        command: docker load -i /tmp/locust.img
       - name: sync docker compose files
-        synchronize: src=/tmp/locust/ dest=~/locust
+        synchronize: src=/mnt/disk2/jenkins/jobs/install-locust/workspace/docker/locust/* dest=~/locust
       - name: adjust sysctl params for locust
         sysctl: name="vm.max_map_count" value="262144" state="present"
       - name: adjust max files descriptors for locust  
