--- a/ansible/locust-inst.yaml
+++ b/ansible/locust-inst.yaml
@@ -13,6 +13,8 @@
         service: name=docker state=started enabled=yes
       - name: install docker-compose
         get_url: url=https://github.com/docker/compose/releases/download/1.8.1/docker-compose-Linux-x86_64 dest=/usr/bin/docker-compose mode=0755
+      - name: create directory
+        shell: mkdir /home/ec2-user/locust
       - name: sync docker compose files
         synchronize: src=/mnt/disk2/jenkins/jobs/install-locust/workspace/docker/locust/* dest=~/locust
       - name: adjust sysctl params for locust
