--- a/docker/locust/docker-compose.yml
+++ b/docker/locust/docker-compose.yml
@@ -1,6 +1,6 @@
 master:
   image: locust:latest
-  command: --host=http://www.gokhankaradas.com/ --master
+  command: --host=http://54.72.239.131/ --master
   hostname: master
   mem_limit: 1G
   ports:
@@ -8,7 +8,7 @@ master:
 
 slave1:
   image: locust:latest
-  command: --host=http://www.gokhankaradas.com/ --slave --master-host=master
+  command: --host=http://54.72.239.131/ --slave --master-host=master
   hostname: slave
   mem_limit: 2G
   links:
@@ -16,7 +16,7 @@ slave1:
 
 slave2:
   image: locust:latest
-  command: --host=http://www.gokhankaradas.com/ --slave --master-host=master
+  command: --host=http://54.72.239.131/ --slave --master-host=master
   hostname: slave
   mem_limit: 2G
   links:
@@ -24,7 +24,7 @@ slave2:
 
 slave3:
   image: locust:latest
-  command: --host=http://www.gokhankaradas.com/ --slave --master-host=master
+  command: --host=http://54.72.239.131/ --slave --master-host=master
   hostname: slave
   mem_limit: 2G
   links:
